force-app/main/default/objects/Pro_Services_Enrollment__c/Pro_Services_Enrollment__c.object-meta.xml
<CustomObject>
    <description>Connector that associates a Contact to a PS Offering</description>
    <label>Pro Services Enrollment</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}/{0000}</displayFormat>
        <label>Enrollment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pro Services Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>