force-app/main/default/objects/Pro_Services_Enrollment__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <formula>PS_Attendee__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization</label>
    <type>Text</type>
</CustomField>