force-app/main/default/objects/Pro_Services_Enrollment__c/fields/PS_Attendee__c.field-meta.xml
<CustomField>
    <fullName>PS_Attendee__c</fullName>
    <description>What event (or Offering) should this individual be associated with?</description>
    <inlineHelpText>What event (or Offering) should this individual be associated with?</inlineHelpText>
    <label>PS Attendee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>PS_Attendee</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>