force-app/main/default/objects/Pro_Services_Enrollment__c/fields/PS_Offering__c.field-meta.xml
<CustomField>
    <fullName>PS_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An offering by the Professional Services team at at specific date or time.</description>
    <inlineHelpText>Select the event (or Offering) this individual will be attending.</inlineHelpText>
    <label>PS Offering</label>
    <referenceTo>Pro_Services_Offering__c</referenceTo>
    <relationshipName>PS_Offering</relationshipName>
    <type>Lookup</type>
</CustomField>