force-app/main/default/objects/Pro_Services_Enrollment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the individual with regard to this specific event (or Offering)</description>
    <inlineHelpText>Status of the individual with regard to this specific event (or Offering)</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Viewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>