force-app/main/default/objects/Pro_Services_Enrollment__c/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <formula>PS_Offering__r.PS_OfferingTargetDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>