force-app/main/default/objects/Pro_Services_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PS_Attendee__c</columns>
    <columns>Organization__c</columns>
    <columns>PS_Offering__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>