force-app/main/default/objects/Pro_Services_Enrollment__c/listViews/Attended.listView-meta.xml
<ListView>
    <fullName>Attended</fullName>
    <columns>NAME</columns>
    <columns>PS_Attendee__c</columns>
    <columns>Organization__c</columns>
    <columns>PS_Offering__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Attended</value>
    </filters>
    <label>Attended</label>
</ListView>