force-app/main/default/objects/Pro_Services_Enrollment__c/listViews/Cancelled.listView-meta.xml
<ListView>
    <fullName>Cancelled</fullName>
    <columns>PS_Attendee__c</columns>
    <columns>Organization__c</columns>
    <columns>PS_Offering__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelled/Will Not Attend</value>
    </filters>
    <label>Cancelled</label>
</ListView>