force-app/main/default/objects/Pro_Services_Enrollment__c/listViews/No_Shows.listView-meta.xml
<ListView>
    <fullName>No_Shows</fullName>
    <columns>NAME</columns>
    <columns>PS_Attendee__c</columns>
    <columns>Organization__c</columns>
    <columns>PS_Offering__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Registered/Did Not Attend</value>
    </filters>
    <label>No Shows</label>
</ListView>