force-app/main/default/objects/Pro_Services_Enrollment__c/listViews/Registered.listView-meta.xml
<ListView>
    <fullName>Registered</fullName>
    <columns>NAME</columns>
    <columns>PS_Offering__c</columns>
    <columns>PS_Attendee__c</columns>
    <columns>Organization__c</columns>
    <columns>Status__c</columns>
    <columns>Target_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Registered/Will Attend</value>
    </filters>
    <filters>
        <field>Target_Date__c</field>
        <operation>greaterThan</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Registered</label>
</ListView>